@@ -7,6 +7,15 @@
 	* hup.h (struct tino_hup_global): global variables moved into
 	hidden struct
 
+2009-02-01  Valentin Hilbig  <tino@zoo.03.softkill.net>
+
+	* data.h (tino_data_write_xmlA): added
+	(tino_data_write_c_escapeA): added
+
+2009-01-31  Valentin Hilbig  <tino@zoo.03.softkill.net>
+
+	* data.h (tino_data_puts_escapeA): tino_data_write_escapeA renamed
+
 2009-01-27  Valentin Hilbig  <tino@zoo.03.softkill.net>
 
 	* shit.h (shit_mode): Only one single argument for IO fd, usually
